# rust-microservice-tutorial

./: Cargo.toml  build.rs  diesel.toml  docker-compose.yml
migrations/2022-02-23-215219_create_tasks/: down.sql  up.sql
proto/: tasks.proto
src/: lib.rs  main.rs
src/api/: tasks.rs
src/model/: task.rs  user.rs
src/services/: tasks.rs  user.rs
src/storage/: local.rs  mod.rs
src/storage/postgres/: mod.rs  schema.rs  service.rs  task.rs
