[package]
name = "task-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.52"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"

[build-dependencies]
tonic-build = "0.6"
